Improved Editing with list creation, renaming and deleting

--- a/addons/Checklist/settings.json
+++ b/addons/Checklist/settings.json
@@ -1,1 +1,1 @@
-{"checklist_folder":"res://addons/Checklist/checklists/","checklist_locations":["res://addons/Checklist/checklists/"],"use_bottom_panel":false}
+{"checklist_folder":"res://addons/Checklist/checklists/","checklist_locations":["res://addons/Checklist/checklists/"],"template_path":"res://addons/Checklist/Template.txt","use_bottom_panel":false}
