--- a/addons/Checklist/settings.json
+++ b/addons/Checklist/settings.json
@@ -1,1 +1,1 @@
-{"changelog_path":"res://Changelog.txt","checklist_folder":"E:/devRepos/tmp/","checklist_locations":["res://addons/Checklist/checklists/"],"template_path":"res://addons/Checklist/Template.txt","use_bottom_panel":false}
+{"changelog_path":"res://Changelog.txt","checklist_folder":"res://addons/Checklist/checklists/","checklist_locations":["res://addons/Checklist/checklists/"],"template_path":"res://addons/Checklist/Template.txt","use_bottom_panel":false}
