--- a/addons/Checklist/plugin.cfg
+++ b/addons/Checklist/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Checklist"
-description="Lets say to make a level for your game you need to take a few steps. These are to complex to perfectly remember and not feasible to automate.
+description="Let's say to make a level for your game you need to take a few steps. These are too complex to perfectly remember and not feasible to automate.
 You need a Checklist. Step by step instructions for future you how to do this. 
 If parts of your process are automated you can launch scripts or export your game directly from the Checklist Docker.
 Also has a build in changelog editor."
